--- a/index.html
+++ b/index.html
@@ -80,54 +80,55 @@ Overall framework of \shortname showing (a) training stage, (b) inference stage,
 
 <p><br /></p>
 
-<table style="width: auto; table-layout: fixed; word-wrap: normal;" border="1">
-<tr>
-  <th>Sample 1</th>
-  <th>Sample 2</th>
-  <th>Sample 3</th>
-  <th>Sample 4</th>
-  <th>Sample 5</th>
-  <th>Sample 6</th>
-</tr>
-
-<tr>
-  <td style="text-align: center;">
-    <img src="assets/mel/temp_mel.png" alt="Sample 1" style="width: 100px; display:block; margin: 0 auto;">
-    <audio controls style="width: 150px;">
-      <source src="assets/wav/temp_wav.wav" type="audio/wav">
-    </audio>
-  </td>
-  <td style="text-align: center;">
-    <img src="assets/mel/temp_mel.png" alt="Sample 2" style="width: 100px; display:block; margin: 0 auto;">
-    <audio controls style="width: 150px;">
-      <source src="assets/wav/temp_wav.wav" type="audio/wav">
-    </audio>
-  </td>
-  <td style="text-align: center;">
-    <img src="assets/mel/temp_mel.png" alt="Sample 3" style="width: 100px; display:block; margin: 0 auto;">
-    <audio controls style="width: 150px;">
-      <source src="assets/wav/temp_wav.wav" type="audio/wav">
-    </audio>
-  </td>
-  <td style="text-align: center;">
-    <img src="assets/mel/temp_mel.png" alt="Sample 4" style="width: 100px; display:block; margin: 0 auto;">
-    <audio controls style="width: 150px;">
-      <source src="assets/wav/temp_wav.wav" type="audio/wav">
-    </audio>
-  </td>
-  <td style="text-align: center;">
-    <img src="assets/mel/temp_mel.png" alt="Sample 5" style="width: 100px; display:block; margin: 0 auto;">
-    <audio controls style="width: 150px;">
-      <source src="assets/wav/temp_wav.wav" type="audio/wav">
-    </audio>
-  </td>
-  <td style="text-align: center;">
-    <img src="assets/mel/temp_mel.png" alt="Sample 6" style="width: 100px; display:block; margin: 0 auto;">
-    <audio controls style="width: 150px;">
-      <source src="assets/wav/temp_wav.wav" type="audio/wav">
-    </audio>
-  </td>
-</tr>
+<table align="center" style="text-align: center;">
+  <tr>
+    <td style="text-align: center;"><b>Sample 1</b></td>
+    <td style="text-align: center;"><b>Sample 2</b></td>
+    <td style="text-align: center;"><b>Sample 3</b></td>
+    <td style="text-align: center;"><b>Sample 4</b></td>
+    <td style="text-align: center;"><b>Sample 5</b></td>
+    <td style="text-align: center;"><b>Sample 6</b></td>
+  </tr>
+  <tr>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
+  </tr>
+  <tr>
+    <td>
+      <audio controls style="display:inline-block; width:150px; height:50px;">
+        <source src="assets/wav/temp_wav.wav" type="audio/wav">
+      </audio>
+    </td>
+    <td>
+      <audio controls style="display:inline-block; width:150px; height:50px;">
+        <source src="assets/wav/temp_wav.wav" type="audio/wav">
+      </audio>
+    </td>
+    <td>
+      <audio controls style="display:inline-block; width:150px; height:50px;">
+        <source src="assets/wav/temp_wav.wav" type="audio/wav">
+      </audio>
+    </td>
+    <td>
+      <audio controls style="display:inline-block; width:150px; height:50px;">
+        <source src="assets/wav/temp_wav.wav" type="audio/wav">
+      </audio>
+    </td>
+    <td>
+      <audio controls style="display:inline-block; width:150px; height:50px;">
+        <source src="assets/wav/temp_wav.wav" type="audio/wav">
+      </audio>
+    </td>
+    <td>
+      <audio controls style="display:inline-block; width:150px; height:50px;">
+        <source src="assets/wav/temp_wav.wav" type="audio/wav">
+      </audio>
+    </td>
+  </tr>
 </table>
 
 <p>​</p>
