--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Extensive experiments show that our model consistently produces high-fidelity 48
 
 <p><br />
 
-<img src="./assets/universr.jpg" /></p>
+<img src="./assets/universr.png" /></p>
 
 Overall framework of \shortname showing (a) training stage, (b) inference stage, (c) vector field estimator architecture, and (d) feature encoder architecture. Specifically, ODE solver consists of feature encoder and vector field estimator.
 
