--- a/index.html
+++ b/index.html
@@ -82,47 +82,53 @@ Overall framework of \shortname showing (a) training stage, (b) inference stage,
 
 <table align="center" style="text-align: center;">
   <tr>
-    <td style="text-align: center;"><b>Sample 1</b></td>
-    <td style="text-align: center;"><b>Sample 2</b></td>
-    <td style="text-align: center;"><b>Sample 3</b></td>
-    <td style="text-align: center;"><b>Sample 4</b></td>
-    <td style="text-align: center;"><b>Sample 5</b></td>
-    <td style="text-align: center;"><b>Sample 6</b></td>
+    <td><b>Sample 1</b></td>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
+    <td>
+      <audio controls style="display:inline-block; width:150px; height:50px;">
+        <source src="assets/wav/temp_wav.wav" type="audio/wav">
+      </audio>
+    </td>
   </tr>
   <tr>
+    <td><b>Sample 2</b></td>
     <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
+    <td>
+      <audio controls style="display:inline-block; width:150px; height:50px;">
+        <source src="assets/wav/temp_wav.wav" type="audio/wav">
+      </audio>
+    </td>
   </tr>
   <tr>
+    <td><b>Sample 3</b></td>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
     <td>
       <audio controls style="display:inline-block; width:150px; height:50px;">
         <source src="assets/wav/temp_wav.wav" type="audio/wav">
       </audio>
     </td>
+  </tr>
+  <tr>
+    <td><b>Sample 4</b></td>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
     <td>
       <audio controls style="display:inline-block; width:150px; height:50px;">
         <source src="assets/wav/temp_wav.wav" type="audio/wav">
       </audio>
     </td>
+  </tr>
+  <tr>
+    <td><b>Sample 5</b></td>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
     <td>
       <audio controls style="display:inline-block; width:150px; height:50px;">
         <source src="assets/wav/temp_wav.wav" type="audio/wav">
       </audio>
     </td>
-    <td>
-      <audio controls style="display:inline-block; width:150px; height:50px;">
-        <source src="assets/wav/temp_wav.wav" type="audio/wav">
-      </audio>
-    </td>
-    <td>
-      <audio controls style="display:inline-block; width:150px; height:50px;">
-        <source src="assets/wav/temp_wav.wav" type="audio/wav">
-      </audio>
-    </td>
+  </tr>
+  <tr>
+    <td><b>Sample 6</b></td>
+    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
     <td>
       <audio controls style="display:inline-block; width:150px; height:50px;">
         <source src="assets/wav/temp_wav.wav" type="audio/wav">
@@ -130,6 +136,7 @@ Overall framework of \shortname showing (a) training stage, (b) inference stage,
     </td>
   </tr>
 </table>
+
 
 <p>​</p>
 
