--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </header>
 
       <main>
-        <h1 id="paper">PAPERNAME</h1>
+        <h1 id="paper">UNIVERSR: UNIFIED AND VERSATILE AUDIO SUPER RESOLUTION VIA VOCODER-FREE FLOW MATCHING</h1>
 
 <p>Anonymous Submission to ICASSP 2026</p>
 
@@ -62,13 +62,13 @@ Extensive experiments show that our model consistently produces high-fidelity 48
 
 <p><br /></p>
 
-<h3 id="proposed-method">Pipeline of MODELNAME</h3>
+<h3 id="proposed-method">Pipeline of UniverSR</h3>
 
 <p><br />
 
 <img src="./assets/universr.png" /></p>
 
-Overall framework of \shortname showing (a) training stage, (b) inference stage, (c) vector field estimator architecture, and (d) feature encoder architecture. Specifically, ODE solver consists of feature encoder and vector field estimator.
+Overall framework of UniverSR showing (a) training stage, (b) inference stage, (c) vector field estimator architecture, and (d) feature encoder architecture. Specifically, ODE solver consists of feature encoder and vector field estimator.
 
 <p><br /></p>
 
@@ -76,7 +76,7 @@ Overall framework of \shortname showing (a) training stage, (b) inference stage,
 
 <p><br /></p>
 
-<p>DETAILS of samples</p>
+<p>TBD</p>
 
 <p><br /></p>
 
