--- a/index.html
+++ b/index.html
@@ -82,60 +82,61 @@ Overall framework of UniverSR showing (a) training stage, (b) inference stage, (
 
 <table align="center" style="text-align: center;">
   <tr>
-    <td><b>Sample 1</b></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
     <td>
-      <audio controls style="display:inline-block; width:150px; height:50px;">
+      <b>Sample 1</b><br>
+      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
+      <audio controls style="width:150px; height:50px;">
         <source src="assets/wav/temp_wav.wav" type="audio/wav">
       </audio>
     </td>
   </tr>
   <tr>
-    <td><b>Sample 2</b></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
     <td>
-      <audio controls style="display:inline-block; width:150px; height:50px;">
+      <b>Sample 2</b><br>
+      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
+      <audio controls style="width:150px; height:50px;">
         <source src="assets/wav/temp_wav.wav" type="audio/wav">
       </audio>
     </td>
   </tr>
   <tr>
-    <td><b>Sample 3</b></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
     <td>
-      <audio controls style="display:inline-block; width:150px; height:50px;">
+      <b>Sample 3</b><br>
+      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
+      <audio controls style="width:150px; height:50px;">
         <source src="assets/wav/temp_wav.wav" type="audio/wav">
       </audio>
     </td>
   </tr>
   <tr>
-    <td><b>Sample 4</b></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
     <td>
-      <audio controls style="display:inline-block; width:150px; height:50px;">
+      <b>Sample 4</b><br>
+      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
+      <audio controls style="width:150px; height:50px;">
         <source src="assets/wav/temp_wav.wav" type="audio/wav">
       </audio>
     </td>
   </tr>
   <tr>
-    <td><b>Sample 5</b></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
     <td>
-      <audio controls style="display:inline-block; width:150px; height:50px;">
+      <b>Sample 5</b><br>
+      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
+      <audio controls style="width:150px; height:50px;">
         <source src="assets/wav/temp_wav.wav" type="audio/wav">
       </audio>
     </td>
   </tr>
   <tr>
-    <td><b>Sample 6</b></td>
-    <td><img src="assets/mel/temp_mel.png" width="100px" height="100px"></td>
     <td>
-      <audio controls style="display:inline-block; width:150px; height:50px;">
+      <b>Sample 6</b><br>
+      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
+      <audio controls style="width:150px; height:50px;">
         <source src="assets/wav/temp_wav.wav" type="audio/wav">
       </audio>
     </td>
   </tr>
 </table>
+
 
 
 <p>​</p>
