--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Overall framework of UniverSR showing (a) training stage, (b) inference stage, (
 
 <p><br /></p>
 
-<p>TBD</p>
+<p>Sample Details</p>
 
 <p><br /></p>
 
