--- a/index.html
+++ b/index.html
@@ -83,59 +83,72 @@ Overall framework of UniverSR showing (a) training stage, (b) inference stage, (
 <table align="center" style="text-align: center;">
   <tr>
     <td>
-      <b>Sample 1</b><br>
-      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
-      <audio controls style="width:150px; height:50px;">
-        <source src="assets/wav/temp_wav.wav" type="audio/wav">
-      </audio>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <b>Sample 1</b>
+        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
+        <audio controls style="width:150px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
     </td>
   </tr>
   <tr>
     <td>
-      <b>Sample 2</b><br>
-      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
-      <audio controls style="width:150px; height:50px;">
-        <source src="assets/wav/temp_wav.wav" type="audio/wav">
-      </audio>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <b>Sample 2</b>
+        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
+        <audio controls style="width:150px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
     </td>
   </tr>
   <tr>
     <td>
-      <b>Sample 3</b><br>
-      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
-      <audio controls style="width:150px; height:50px;">
-        <source src="assets/wav/temp_wav.wav" type="audio/wav">
-      </audio>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <b>Sample 3</b>
+        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
+        <audio controls style="width:150px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
     </td>
   </tr>
   <tr>
     <td>
-      <b>Sample 4</b><br>
-      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
-      <audio controls style="width:150px; height:50px;">
-        <source src="assets/wav/temp_wav.wav" type="audio/wav">
-      </audio>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <b>Sample 4</b>
+        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
+        <audio controls style="width:150px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
     </td>
   </tr>
   <tr>
     <td>
-      <b>Sample 5</b><br>
-      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
-      <audio controls style="width:150px; height:50px;">
-        <source src="assets/wav/temp_wav.wav" type="audio/wav">
-      </audio>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <b>Sample 5</b>
+        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
+        <audio controls style="width:150px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
     </td>
   </tr>
   <tr>
     <td>
-      <b>Sample 6</b><br>
-      <img src="assets/mel/temp_mel.png" width="100px" height="100px"><br>
-      <audio controls style="width:150px; height:50px;">
-        <source src="assets/wav/temp_wav.wav" type="audio/wav">
-      </audio>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <b>Sample 6</b>
+        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
+        <audio controls style="width:150px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
     </td>
   </tr>
 </table>
+
 
 
 
