--- a/index.html
+++ b/index.html
@@ -80,76 +80,238 @@ Overall framework of UniverSR showing (a) training stage, (b) inference stage, (
 
 <p><br /></p>
 
-<table align="center" style="text-align: center;">
+<table align="center" style="text-align: center; border-collapse: collapse;" border="1">
+  <!-- 컬럼 헤더 -->
   <tr>
+    <th style="text-align:center;"></th>
+    <th style="text-align:center;">8 → 48 kHz</th>
+    <th style="text-align:center;">12 → 48 kHz</th>
+    <th style="text-align:center;">16 → 48 kHz</th>
+    <th style="text-align:center;">24 → 48 kHz</th>
+  </tr>
+
+  <!-- row 1 -->
+  <tr>
+    <td><b>Model 1</b></td>
     <td>
       <div style="display:flex; flex-direction:column; align-items:center;">
-        <b>Sample 1</b>
-        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
-        <audio controls style="width:150px; height:50px;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
           <source src="assets/wav/temp_wav.wav" type="audio/wav">
         </audio>
       </div>
     </td>
   </tr>
+
+  <!-- row 2 -->
   <tr>
+    <td><b>Model 2</b></td>
     <td>
       <div style="display:flex; flex-direction:column; align-items:center;">
-        <b>Sample 2</b>
-        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
-        <audio controls style="width:150px; height:50px;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
           <source src="assets/wav/temp_wav.wav" type="audio/wav">
         </audio>
       </div>
     </td>
   </tr>
+
+  <!-- row 3 -->
   <tr>
+    <td><b>Model 3</b></td>
     <td>
       <div style="display:flex; flex-direction:column; align-items:center;">
-        <b>Sample 3</b>
-        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
-        <audio controls style="width:150px; height:50px;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
           <source src="assets/wav/temp_wav.wav" type="audio/wav">
         </audio>
       </div>
     </td>
   </tr>
+
+  <!-- row 4 -->
   <tr>
+    <td><b>Model 4</b></td>
     <td>
       <div style="display:flex; flex-direction:column; align-items:center;">
-        <b>Sample 4</b>
-        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
-        <audio controls style="width:150px; height:50px;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
           <source src="assets/wav/temp_wav.wav" type="audio/wav">
         </audio>
       </div>
     </td>
   </tr>
+
+  <!-- row 5 -->
   <tr>
+    <td><b>Model 5</b></td>
     <td>
       <div style="display:flex; flex-direction:column; align-items:center;">
-        <b>Sample 5</b>
-        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
-        <audio controls style="width:150px; height:50px;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
           <source src="assets/wav/temp_wav.wav" type="audio/wav">
         </audio>
       </div>
     </td>
   </tr>
+
+  <!-- row 6 -->
   <tr>
+    <td><b>Model 6</b></td>
     <td>
       <div style="display:flex; flex-direction:column; align-items:center;">
-        <b>Sample 6</b>
-        <img src="assets/mel/temp_mel.png" width="100px" height="100px">
-        <audio controls style="width:150px; height:50px;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
+          <source src="assets/wav/temp_wav.wav" type="audio/wav">
+        </audio>
+      </div>
+    </td>
+    <td>
+      <div style="display:flex; flex-direction:column; align-items:center;">
+        <img src="assets/mel/temp_mel.png" width="200px" height="100px">
+        <audio controls style="width:200px; height:50px;">
           <source src="assets/wav/temp_wav.wav" type="audio/wav">
         </audio>
       </div>
     </td>
   </tr>
 </table>
-
-
 
 
 <p>​</p>
